API doc w/ schema following https://hexdocs.pm/phoenix_swagger/PhoenixSwagger.html#swagger_schema/1
